Fixed footer alignment

--- a/docroot/sites/akdn/themes/akdn/css/styles.css
+++ b/docroot/sites/akdn/themes/akdn/css/styles.css
@@ -21820,8 +21820,9 @@ html[dir='rtl'] .quicklinks_social_block, html[dir='rtl'] .panel-whatwedo, html[
 html[dir='rtl'] .social-box li:first-child a {
   margin-left: 10px;
 }
-/* line 153, ../sass/_new-style.scss */
-html[dir='rtl'] .region-footer-second {
+
+/* line 154, ../sass/_new-style.scss */
+.region-footer-second {
   text-align: center;
 }
 
